# Gask

./: CHANGELOG.md  README.md  cabal.project.local  gask.cabal
Auxiliary/: gask.vim
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.6.1/: gask-0.1.0.0-inplace.conf  package.cache
src/: Gask.hs
src-exe/: Configuration.hs  Gask.hs  Main.hs  Settings.hs
src/Gask/: API.hs  Documentation.md  Types.hs
src/Gask/API/: BatchEmbedContents.hs  CountTokens.hs  EmbedContent.hs  GenerateContent.hs  Get.hs  List.hs  Requests.hs  StreamGenerateContent.hs
src/Gask/Types/: Candidate.hs  CitationMetadata.hs  Content.hs  ContentEmbedding.hs  Error.hs  GenerateContentResponse.hs  GenerationConfig.hs  ModelInfo.hs  ModelList.hs  PromptFeedback.hs  Result.hs  SafetyRating.hs  SafetySetting.hs  TaskType.hs  UsageMetadata.hs
