cabal-version:      3.0
name:               gask
version:            0.1.0.0
-- synopsis:
-- description:
license:            GPL-3.0-only
license-file:       LICENSE
author:             lesserfish
maintainer:         lesserfish@pm.me
-- copyright:
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

constraints: json-stream +conduit

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Gask,
                      Gask.Types,
                      Gask.Types.Candidate,
                      Gask.Types.CitationMetadata,
                      Gask.Types.Content,
                      Gask.Types.Error,
                      Gask.Types.GenerateContentResponse,
                      Gask.Types.GenerationConfig,
                      Gask.Types.ModelInfo,
                      Gask.Types.ModelList,
                      Gask.Types.PromptFeedback,
                      Gask.Types.Result,
                      Gask.Types.SafetyRating,
                      Gask.Types.SafetySetting,
                      Gask.Types.UsageMetadata,
                      Gask.API.GenerateContent,
                      Gask.API.Get,
                      Gask.API.List,
                      Gask.API.Requests,
                      Gask.API.StreamGenerateContent
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.18.0.0,
                      aeson >= 2.2.1.0,
                      containers >= 0.6.8,
                      vector >= 0.13.1.0,
                      mtl >= 2.3.1,
                      http-conduit >= 2.3.8.3,
                      http-types >= 0.12.3,
                      bytestring >= 0.11.4.0,
                      json-stream >= 0.4.4.0,
                      conduit >= 1.3.5,
                      exceptions >= 0.10.7
    hs-source-dirs:   src
    default-language: Haskell2010

executable gask
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.18.0.0,
        gask

    hs-source-dirs:   src-exe
    default-language: Haskell2010

