cabal-version:      3.0
name:               gask
version:            0.1.0.0
-- synopsis:
-- description:
license:            GPL-3.0-only
license-file:       LICENSE
author:             lesserfish
maintainer:         lesserfish@pm.me
-- copyright:
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

constraints: json-stream +conduit

common warnings
    ghc-options: -Wall

library gasklib
    import:           warnings
    exposed-modules:  Gask.Types,
                      Gask.Types.Candidate,
                      Gask.Types.CitationMetadata,
                      Gask.Types.ContentEmbedding,
                      Gask.Types.Content,
                      Gask.Types.Error,
                      Gask.Types.GenerateContentResponse,
                      Gask.Types.GenerationConfig,
                      Gask.Types.ModelInfo,
                      Gask.Types.ModelList,
                      Gask.Types.PromptFeedback,
                      Gask.Types.Result,
                      Gask.Types.SafetyRating,
                      Gask.Types.SafetySetting,
                      Gask.Types.TaskType,
                      Gask.Types.UsageMetadata,
                      Gask.API,
                      Gask.API.BatchEmbedContents,
                      Gask.API.EmbedContent,
                      Gask.API.GenerateContent,
                      Gask.API.Get,
                      Gask.API.List,
                      Gask.API.Requests,
                      Gask.API.StreamGenerateContent
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.18.0.0,
                      aeson >= 2.2.1.0,
                      http-conduit >= 2.3.8.3,
                      bytestring >= 0.11.4.0,
                      json-stream >= 0.4.4.0,
                      conduit >= 1.3.5,
    hs-source-dirs:   src
    default-language: Haskell2010

executable gask
    import:           warnings
    main-is:          Main.hs
    other-modules: Configuration
    -- other-extensions:
    build-depends:
        base ^>=4.18.0.0,
        aeson >= 2.2.1.0,
        optparse-applicative >= 0.18.1.0,
        bytestring >= 0.11.4.0,
        directory >= 1.3.8.1,
        filepath >= 1.4.100.1,
        haskeline >= 0.8.2.1,
        ansi-terminal >= 1.0,
        gasklib

    hs-source-dirs:   src-exe
    default-language: Haskell2010

